
Project GoReddit {
    database_type: 'PostgreSQL'
    Note: '''
        # GoReddit Database
    '''
}

Table users as U {
  username varchar [pk, unique]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
  karma bigint [not null, default: 0]

  Indexes {
    username
  }
}

Table posts as R {
  id bigint [pk]
  user varchar [ref: > U.username, not null]
  title varchar [not null]
  content varchar [not null]
  subreddit varchar [ref: > S.name, not null]
  created_at timestamptz [not null, default: `now()`]
  upvotes bigint [not null, default: 0]

  indexes {
    user
    (user) [unique]
  }
}

Table subreddits as S {
  name varchar [pk, unique]
  moderator varchar [ref: > U.username, not null]
  followers bigint [not null, default: 0]
  description varchar
  created_at timestamptz [not null, default: `now()`]
}
